fix page overflow

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -238,14 +238,18 @@ body
   position: absolute
   top: 0
   width: 100%
-  min-height: 100vh
   opacity: 0
   transition: opacity $transition-duration
   padding-top: $header-height
   pointer-events: none
-  &.page-active
+  height: 0
+  overflow: hidden
+  &.page-active, &.active
     pointer-events: all
     opacity: 1
+    height: auto
+    min-height: 100vh
+    overflow: auto
 
 // ******************************************************
 
